# zbMcLib

./: LICENSE  README.md  build.bat  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml  release.yml
script/: config.py
zbMcLib/: __init__.py  mccn.py
zbMcLib/mccn/: ccui.py  h5api.py  home.py  name.py  url.py  version.py
