[project]
name = "zbMcLib"
version = "0.2.14"
description = "zbMinecraft库"
requires-python = ">=3.12"
dependencies = [
    "zbToolLib>=2.0.2",
    "lxml>=6.0.0",
    "beautifulsoup4>=4.13.4",
    "pillow>=11.3.0",
]
authors = [
    { name = "Ianzb", email = "93322252@qq.com" },
]
maintainers = [
    { name = "Ianzb", email = "93322252@qq.com" },
]
readme = "README.md"
license = { text = "MIT License" }
keywords = ["zb", "Ianzb", "Minecraft", "lib"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Repository = "https://github.com/Ianzb/zbMcLib/"